--- a/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/wishList.cshtml
@@ -129,7 +129,7 @@
                                             double sum = 0;
                                             foreach (var row in item.property.property_reviews.ToList())
                                             {
-                                                sum = sum + double.Parse(row.overall_rating);
+                                                sum = sum + (double)row.overall_rating;
                                             }
                                             sum = sum / item.property.property_reviews.ToArray().Length;
                                         }
