--- a/PPl3/Views/Home/Detail.cshtml
+++ b/PPl3/Views/Home/Detail.cshtml
@@ -235,7 +235,10 @@
                             <div class="gird wide">
                                 <div class="row no-gutter room_container">
                                     <div class="col l-12 m-12 c-12 room_tittle">
-                                        <h2>Where you'll sleep</h2>
+                                        <h2>
+                                            User's photo of the hotel
+                                          
+                                        </h2>
                                     </div>
                                     @{
                                         count = 0;
@@ -416,7 +419,7 @@
                                     {
                                         <p>@item.discounts_value% @item.discount.descride</p>
                                     }
-                                    <p>0.01% booking fee</p>
+                                    <p>30% booking fee</p>
                                 </div>
                                 <div class="pay_footer">
                                     <button onclick="window.location.href = '/user/homeuser/detail?id=@property.id'">Login To Booking Hotel</button>
