--- a/PPl3/ExtraFiles/assets/css/revenue.css
+++ b/PPl3/ExtraFiles/assets/css/revenue.css
@@ -184,6 +184,17 @@ html{
     cursor: pointer;
 }
 
+.tittle select{
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    background-color: #f9f9f9;
+    color: #333;
+
+}
+
+
 .table_render{
     width: 100%;
     height: 300px;
