Done evaluating the host

--- a/PPl3/Areas/User/Views/HomeUser/Comment.cshtml
+++ b/PPl3/Areas/User/Views/HomeUser/Comment.cshtml
@@ -100,68 +100,96 @@
             }
             else
             {
-                <div class="grid wide">
-                    <div class="row no-gutter">
-                        <div class="col l-6 m-6 c-12">
-                            <ul class="list_img">
-                                <div class="container_img">
-                                <li class="img_1">
-                                    <input type="file" class="file_1" hidden>
-                                    <button class="add_btn btn_1"><i class="fa-solid fa-plus"></i></button>
-                                    <button class="remove_btn remove_1"><i class="fa-solid fa-close"></i></button>
-                                </li>
-                                <li class="img_2">
-                                    <input type="file" class="file_2" hidden>
-                                    <button class="add_btn btn_2"><i class="fa-solid fa-plus"></i></button>
-                                    <button class="remove_btn remove_2"><i class="fa-solid fa-close"></i></button>
-                                </li>
-                        </div>
+        <div class="grid wide">
+            <div class="row no-gutter">
+                <div class="col l-6 m-6 c-12">
+                    <ul class="list_img">
                         <div class="container_img">
-                            <li class="img_3">
-                                <input type="file" class="file_3" hidden>
-                                <button class="add_btn btn_3"><i class="fa-solid fa-plus"></i></button>
-                                <button class="remove_btn remove_3"><i class="fa-solid fa-close"></i></button>
-                            </li>
-                            <li class="img_4">
-                                <input type="file" class="file_4" hidden>
-                                <button class="add_btn btn_4"><i class="fa-solid fa-plus"></i></button>
-                                <button class="remove_btn remove_4"><i class="fa-solid fa-close"></i></button>
-                            </li>
-                        </div>
-                        </ul>
+                        <li class="img_1">
+                            <input type="file" class="file_1" hidden>
+                            <button class="add_btn btn_1"><i class="fa-solid fa-plus"></i></button>
+                            <button class="remove_btn remove_1"><i class="fa-solid fa-close"></i></button>
+                        </li>
+                        <li class="img_2">
+                            <input type="file" class="file_2" hidden>
+                            <button class="add_btn btn_2"><i class="fa-solid fa-plus"></i></button>
+                            <button class="remove_btn remove_2"><i class="fa-solid fa-close"></i></button>
+                        </li>
+                </div>
+                <div class="container_img">
+                    <li class="img_3">
+                        <input type="file" class="file_3" hidden>
+                        <button class="add_btn btn_3"><i class="fa-solid fa-plus"></i></button>
+                        <button class="remove_btn remove_3"><i class="fa-solid fa-close"></i></button>
+                    </li>
+                    <li class="img_4">
+                        <input type="file" class="file_4" hidden>
+                        <button class="add_btn btn_4"><i class="fa-solid fa-plus"></i></button>
+                        <button class="remove_btn remove_4"><i class="fa-solid fa-close"></i></button>
+                    </li>
+                </div>
+                </ul>
+            </div>
+            <div class="col l-6 m-6 c-12">
+                <div class="container_comment">
+                    <div class="tittle">
+                        <i class="fa-brands fa-think-peaks" style="color: #ff385c;"></i>
+                        <span>@Model.property.p_name</span>
                     </div>
-                    <div class="col l-6 m-6 c-12">
-                        <div class="container_comment">
-                            <div class="tittle">
-                                <i class="fa-brands fa-think-peaks" style="color: #ff385c;"></i>
-                                <span>@Model.property.p_name</span>
-                            </div>
-                            <div class="list_star">
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                                <i class="fa-regular fa-star"></i>
-                            </div>
-                            <div class="text">
-                                <textarea name="comments" rows="4" cols="50" id="comments"></textarea>
-                            </div>
-                        </div>
+                    <div class="list_star star_hotel">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
                     </div>
-                    <div class="col l-12 m-12 c-12">
-                        <div class="list_btn">
-                            <button class="Summit_btn">Comment</button>
-                            <button class="Skip_btn">Skip</button>
-                        </div>
+                    <div class="text">
+                        <textarea name="comments" rows="4" cols="50" id="comments_hotel"></textarea>
                     </div>
                 </div>
+            </div>
+            <div class="col l-12 m-12 c-12">
+                <div class="tittle">
+                    <h5>Review Host</h5>
+                </div>
+            </div>
+            <div class="col l-6 m-6 c-12">
+                <div class="box">
+                    <div class="avatar">
+                        <img src="@Model.user1.user_profile.FirstOrDefault().user_avatar" alt="">
+                    </div>
+                    <!-- Details hotel by <a></a> -->
+                    <div class="name_host">
+                        <h2><a href="/user/homeuser/profile?id=@Model.user1.id">@Model.user1.user_personalInfor.FirstOrDefault().legal_name</a></h2>
+                    </div>
+                    <div class="list_star star_host">
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                        <i class="fa-regular fa-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="col l-6 m-6 c-12">
+                <div class="text text_host">
+                    <textarea name="comments" rows="4" cols="50" id="comments_host"></textarea>
+                </div>
+            </div>
+            <div class="col l-12 m-12 c-12">
+                <div class="list_btn">
+                    <button class="Summit_btn">Comment</button>
+                    <button class="Skip_btn">Skip</button>
+                </div>
+            </div>
+        </div>
             </div>
             }
                 
     </div>
     </div>
     <script src="~/ExtraFiles/JS/menuGuest.js"></script>
-    <script src="~/ExtraFiles/JS/evaluate.js?v=2"></script>
+    <script src="~/ExtraFiles/JS/evaluate.js?v = 3"></script>
 </body>
 </html>
 <script src="~/Scripts/jquery-3.7.1.js"></script>
@@ -171,10 +199,14 @@
     function getData(callback) {
         data["transation_id"] = @Html.Raw(Json.Encode(Model.id));
  
-        var comment = $('#comments').val();
-        data["comment"] = comment;
-        var list_star = $('.list_star .select');
-        data["number_star"] = list_star.length;
+        var comment_hotel = $('#comments_hotel').val();
+        data["comment_hotel"] = comment_hotel;
+        var comment_host = $('#comments_host').val();
+        data["comment_host"] = comment_host;
+        var list_star_hotel = $('.star_hotel .select');
+        data["number_star_hotel"] = list_star_hotel.length;
+        var list_star_host = $('.star_host .select');
+        data["number_star_host"] = list_star_host.length;
         var tasksCompleted = 0;
         var totalTasks = 4;
         function checkTaskCompletion() {
